fix: changes matching amigoscoderepo